# qpbenchmark

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  benchmark.py  environment.yaml  pyproject.toml  run_benchmark.py  tox.ini  vrac.py  write_report.py
.github/ISSUE_TEMPLATE/: feature_request.md  new_problem.md  report_a_bug.md  software_issue.md
.github/workflows/: CI.yml  ci.yml
data/maros_meszaros/: OPTCOSTS.json  OPTCOSTS.yaml  README.md
github_ffa/: github_ffa.py  problem.py
github_ffa/github_ffa_problems/: ghffa01.py  ghffa02.py  ghffa03.py
github_ffa/problems/: ghffa01.py  ghffa02.py  ghffa03.py
github_ffa/results/: .gitignore  github_ffa.csv  github_ffa.md
maros_meszaros/: __init__.py  maros_meszaros.py  maros_meszaros_dense.py  maros_meszaros_dense_posdef.py  problem.py
maros_meszaros/results/: maros_meszaros.csv  maros_meszaros.md  maros_meszaros_dense.csv  maros_meszaros_dense.md  maros_meszaros_dense_posdef.csv  maros_meszaros_dense_posdef.md  tmp_without_hpipm.csv
maros_meszaros/results/x86_64-intel_core_i7_9750h/: maros_meszaros_dense.csv
qpbenchmark/: __init__.py  benchmark.py  exceptions.py  parquet_test_set.py  plot_metric.py  problem.py  problem_list.py  report.py  results.py  run.py  shgeom.py  solver_issues.py  solver_settings.py  spdlog.py  test_set.py  tolerance.py  utils.py  version.py
qpsolvers_benchmark/: __init__.py  benchmark.py  exceptions.py  known_solvers.py  plot_metric.py  plots.py  problem.py  report.py  results.py  run.py  run_test_set.py  shgeom.py  solver_issues.py  solver_settings.py  spdlog.py  test_set.py  tolerance.py  utils.py  validation.py  validator.py  version.py
qpsolvers_benchmark/test_sets/: __init__.py  github_ffa.py  inverse_kinematics.py  maros_meszaros.py  maros_meszaros_dense.py  maros_meszaros_dense_posdef.py  problem.py  test_set.py
qpsolvers_benchmark/test_sets/github_ffa_problems/: __init__.py  ghffa01.py  ghffa02.py  ghffa03.py  wieber2017geometric.py
qpsolvers_benchmark/test_sets/problems/github_ffa/: __init__.py  wieber2017geometric.py
results/: .gitignore  README.md  github_ffa.csv  github_ffa.md  maros_meszaros.csv  maros_meszaros.md  maros_meszaros_dense.csv  maros_meszaros_dense.md
results/maros_meszaros/: maros_meszaros-x86_64-intel_core_i7_9750h.csv  maros_meszaros-x86_64-intel_core_i7_9750h.md
results/maros_meszaros_dense/: maros_meszaros_dense-x86_64-intel_core_i7_9750h.md
results/x86_64-intel_core_i7_9750h/: maros_meszaros_dense.md
tests/: __init__.py  custom_problem.py  custom_test_set.py  test_problem.py  test_report.py  test_run.py  test_test_set.py  test_tolerance.py  test_validation.py  test_validator.py
